--- a/InsertionSort/InsertionSort.csproj
+++ b/InsertionSort/InsertionSort.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AF2F8207-A4AB-4B57-9067-C4E21BB7BB90}</ProjectGuid>
+    <ProjectGuid>{4B92F799-A031-4113-A494-CD89F53B88B7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BubbleSort</RootNamespace>
-    <AssemblyName>BubbleSort</AssemblyName>
+    <RootNamespace>InsertionSort</RootNamespace>
+    <AssemblyName>InsertionSort</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,7 +45,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
